# Tracecraft

./: Cargo.toml  Dockerfile  README.md  gen_advanced_tests.sh  test_complex.rs  test_method.rs  test_trait.rs
.github/workflows/: ci.yml
assets/: AppIcon.icns
benches/: scip_bench.rs
docs/: architecture.md  usecase.md
frontend/: CMakeLists.txt
frontend/src/: graphview.cpp  main.cpp  mainwindow.cpp
mr_hedgehog_db/: db  snap.000000000000065B
scripts/: deploy_to_desktop.sh  smoke_test.sh
src/: lib.rs  main.rs
src/api/: dto.rs  mod.rs  server.rs
src/application/: mod.rs
src/common/: mod.rs
src/domain/: ast.rs  callgraph.rs  entry_point.rs  flowgraph.rs  index.rs  language.rs  mod.rs  scip_ingest.rs  store.rs
src/infrastructure/: concurrency.rs  expander.rs  mod.rs  project_loader.rs  scip_cache.rs  scip_runner.rs
src/ports/: flowchart_exporter.rs  mod.rs
test_advanced_ws/: Cargo.toml
test_advanced_ws/bin_demo/: Cargo.toml
test_advanced_ws/bin_demo/src/: main.rs
test_advanced_ws/lib_base/: Cargo.toml
test_advanced_ws/lib_base/src/: lib.rs
test_advanced_ws/lib_derive/: Cargo.toml
test_advanced_ws/lib_derive/src/: lib.rs
test_advanced_ws/lib_trait/: Cargo.toml
test_advanced_ws/lib_trait/src/: lib.rs
tests/: phase2_verification.rs  phase3_python_verification.rs  phase4_ipc_verification.rs  simple_callgraph.rs
