[package]
name = "tracecraft"
version = "0.1.0"
edition = "2021"
authors = ["Frank Chen <plokm85222131@gmail.com>"]
description = "Rust static analysis tool for multi-crate workspaces: callgraph, AST, dependencies, and flow tracing."
license = "MIT OR Apache-2.0"
repository = "https://github.com/plokm5151/tracecraft"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
syn = { version = "2", features = ["full"] }
toml = "0.8"
cargo_metadata = "0.18"
anyhow = "1.0"
rayon = "1.10"
dashmap = "6.0"
sled = "0.34"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
num_cpus = "1.16"
scip = "0.5"
protobuf = "3.7"

[dependencies.proc-macro2]
version = "1"
features = ["span-locations"]

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scip_bench"
harness = false
